# transparency_gl_test

./: CMakeLists.txt
shaders/: generic.vert  post_processing.frag  transparency.frag
src/: main.cpp  render.h
